--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,10 @@ dependencies:
   firebase_auth: ^0.18.3
   firebase_core: ^0.5.3
   cloud_firestore: ^0.14.4
-  # dio: ^4.0.4
   dio: ^3.0.10
   http: ^0.12.2
+  google_sign_in: ^4.5.9
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
