--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   http: ^0.12.2
   google_sign_in: ^4.5.9
   provider: ^4.3.3
+  http_parser: ^3.1.4
 
 dev_dependencies:
   flutter_test:
