--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   google_sign_in: ^4.5.9
   provider: ^4.3.3
   http_parser: ^3.1.4
+  url_launcher: ^6.0.5
+  uni_links: ^0.4.0
+  cached_network_image: ^2.5.1
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
