--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_sign_in: ^4.5.9
   provider: ^4.3.3
   http_parser: ^3.1.4
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
