--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   uni_links: ^0.4.0
   cached_network_image: ^2.5.1
   fluttertoast: ^8.0.9
+  firebase_database: ^4.4.0
+  bubble_tab_indicator: ^0.1.6
+  firebase_storage: ^5.0.1
+  image_picker: ^0.6.7+22
 
 dev_dependencies:
   flutter_test:
