--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  image_path: "assets/icon/lcp_icon.png"
+  android: true
+  ios: true
+
 flutter:
   uses-material-design: true
   assets:
